--- a/lab1/style.css
+++ b/lab1/style.css
@@ -14,8 +14,19 @@ body{
     background-color: #00AFC1;
 }
 .menu-item{
+    font-size: 29px;
+    padding: 9px;
+    background-color: #007BFF;
+    border-radius: 10%;
+    width: 150px;
+}
+.menu-item:hover{
+    background-color: #0093AB;
+}
+.menu-item1{
     font-size: 20px;
     padding: 9px;
+    border-radius: 10%;
 }
 .index-logo{
     width: 200px;
@@ -61,4 +72,80 @@ body{
 }
 .ul-item{
     color: wheat;
+}
+.header{
+    width: 100%;
+}
+.header__logo{
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+}
+.header__logo_img{
+    width: 80%;
+}
+.header__text{
+    margin:40px;   
+}
+.header-title{
+    font-size: 42px;
+    margin-bottom: 20px;
+}
+.header-text{
+    display: flex;
+    justify-content: space-around;
+    font-size: 20px;
+    width: 100%;
+}
+.header__img{
+    width: 40%;
+}
+.header__info{
+    width: 40%;
+}
+.grid{
+    width: 300px;
+    height: 200px;
+}
+.photos{
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+}
+
+.container {
+    text-align: center;
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.form-heading {
+    text-align: center;
+}
+
+.input-field,
+.textarea-field {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.submit-button {
+    background-color: #007BFF;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.submit-button:hover {
+    background-color: #0056b3;
 }
